fixed jumpy charts in firefox

--- a/src/mainApp/styles/salesByDay.module.scss
+++ b/src/mainApp/styles/salesByDay.module.scss
@@ -3,5 +3,4 @@
   flex-wrap:wrap;
   width: 100%;
   height: 300px;
-  overflow-y: auto;
 }
