--- a/src/mainApp/styles/switch.module.scss
+++ b/src/mainApp/styles/switch.module.scss
@@ -18,6 +18,6 @@
   flex-wrap:wrap;
   width: 100%;
   height: 300px;
-  overflow-y: auto;
+  // overflow-y: auto;
 }
 
